--- a/style/blocks/burger.scss
+++ b/style/blocks/burger.scss
@@ -8,6 +8,7 @@
   #menuToggle {
     display: block;
     position: relative;
+    width: 35px;
     top: -30px;
     left: 20px;
 
